V5 Call and UI completed

--- a/JIOSiteNavigator/Properties/AndroidManifest.xml
+++ b/JIOSiteNavigator/Properties/AndroidManifest.xml
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="JIOSiteNavigator.JIOSiteNavigator" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
 	<uses-sdk />
+	<uses-permission android:name="android.permission.CALL_PHONE" />
 	<application android:label="JIOSiteNavigator" android:icon="@drawable/JIOLogo2"></application>
 </manifest>
