--- a/SiteNavigatorLib/SiteNavigatorLib.csproj
+++ b/SiteNavigatorLib/SiteNavigatorLib.csproj
@@ -64,9 +64,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="SiteDataFile.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </EmbeddedResource>
+    <EmbeddedResource Include="SiteDataFile.json" />
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
   </ItemGroup>
